# payment

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  build.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.stg.yml  docker-compose.yml  docker_ps.sh  down.sh  log.sh  package.json  pyproject.toml  stg.sh  stg_down.sh
.claude/: launch.json
alembic/: env.py
alembic/versions/: 2234818cce0e_trial_suspended_states.py  2caae01d3691_user_phone_and_statuses.py  3501c20729e0_user_services_junction.py  794d3b3fcf7c_plan_recurring_discount.py  8cf5f449fda1_initial_schema.py  a1b2c3d4e5f6_service_api_key_encrypted.py  a3b4c5d6e7f8_card_vault.py  a7b8c9d0e1f2_payment_order_scope.py  acfb71bc40a6_service_toss_secret_key.py  b1c2d3e4f5a6_card_id_nullable.py  b2c3d4e5f6a7_audit_actor_service_id.py  b8c9d0e1f2a3_perf_indexes.py  c1d2e3f4a5b6_extended_status.py  c2d3e4f5a6b7_card_is_active.py  c3d4e5f6a7b8_payment_one_off.py  d2e3f4a5b6c7_global_settings_security_policy.py  d3e4f5a6b7c8_service_notification_url.py  (+6 more)
app/: cli.py  main.py
app/api/: deps.py  (+2 more)
db_backup_sw/: backup.sh  plan.md
db_server/: .env.example  README.md  run.sh
docker/: README.md  entrypoint.sh
docs/: manual-generator-prompt.md
sample_service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.yml  requirements.txt  test_report.html
scripts/: feature_test_report.py  gen_feature_test_report.py  init-db.sql  reset_db_keep_admin.sql  seed_demo.py
tests/: conftest.py  factories.py  helpers.py
(+644 files in other folders)
