[project]
name = "payment-system"
version = "0.1.0"
description = "사내 구독/결제 API 서버 (TossPayments 빌링)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "httpx>=0.28",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.7",
    "argon2-cffi>=23.1",
    "cryptography>=44.0",
    "python-dateutil>=2.9",
    "apscheduler>=3.11,<4",
    "greenlet>=3.1",
    "openpyxl>=3.1",
    "django>=6.0.6",
    "requests>=2.34.2",
    "markdown>=3.10.2",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
